--- a/src/app/application/application-dashboard/application-dashboard.component.less
+++ b/src/app/application/application-dashboard/application-dashboard.component.less
@@ -390,10 +390,19 @@
 	font-size: 16px;;
 }
 .booking-demo {
-	display: inline-block;padding: 0px 0px;color: #404040;height: 60px;padding-top: 10px;
+	display: inline-block;
+	padding: 0px 0px;
+	color: #404040;
+	height: 60px;
+	// padding-top: 10px;
 	// font-weight: 600;
 	margin-right: 2px;vertical-align: top;
 	// border: 1px solid #999;
 	width: 135px;
 	background: #e8f4ff;
+}
+
+.dl_value_count_demo {
+	font-size: 22px;
+    font-weight: 600;
 }
