--- a/src/styles.less
+++ b/src/styles.less
@@ -50,7 +50,7 @@ html{
 html, body { height: 100%; }
 body{
     margin: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     background: #f5f6f7;
     font-weight: 400;
     line-height: 1.5;
