--- a/src/app/application/application-dashboard/application-dashboard.component.less
+++ b/src/app/application/application-dashboard/application-dashboard.component.less
@@ -396,9 +396,10 @@
 	height: 60px;
 	// padding-top: 10px;
 	// font-weight: 600;
-	margin-right: 2px;vertical-align: top;
+	margin-right: 2px;
+	vertical-align: top;
 	// border: 1px solid #999;
-	width: 135px;
+	width: 100%;
 	background: #e8f4ff;
 }
 
