--- a/src/app/application/application-dashboard/application-dashboard.component.less
+++ b/src/app/application/application-dashboard/application-dashboard.component.less
@@ -49,16 +49,17 @@
 	padding: 15px 0;
 }
 .data_list {
-	border: 1px #e6e6e6 solid;
-	border-left: 4px solid transparent;
+	border: 1px solid rgba(106,108,110,0.38);
+	// border-left: 4px solid transparent;
 	margin-bottom: 15px;
 	border-radius: 5px;
 	background: #fff;
 }
 .data_list.active {
-	-webkit-box-shadow: 0 0 0 2px #2c9bf9, 0 2px 11px rgba(0, 0, 0, 0.43);
-	box-shadow: 0 0 0 2px #2c9bf9, 0 2px 11px rgba(0, 0, 0, 0.43);
-	background: #f4f4f4;
+	-webkit-box-shadow: 0 0 5px 0px #009bfa, 0 2px 11px rgba(0, 0, 0, 0.43);
+	box-shadow: 0 0 3px 0px #009bfa, 0 2px 11px rgba(0, 0, 0, 0.43);
+	background: #fff;
+	border-left: 2px solid #009bfa;
 }
 .data_list_header {
 	padding: 8px 15px;
