--- a/src/styles.less
+++ b/src/styles.less
@@ -1126,11 +1126,11 @@ select{
 	font-size: 12px;
 	border-radius: 0 0 8px 8px;
 }
- .card .table td, .card .table th{
-	padding-top: 8px;
-	padding-bottom: 8px;
-	font-size: 13.5px;
-}
+//  .card .table td, .card .table th{
+// 	padding-top: 8px;
+// 	padding-bottom: 8px;
+// 	font-size: 13.5px;
+// }
 .table th{
 	color: #6a6969;
 	font-weight: 300;
@@ -2202,3 +2202,19 @@ td .table-sm input, td .table-sm select, td .table-sm{
 		font-weight: 400;
 		font-size: 1.6rem;
 	  }
+	  
+
+.grid-header {
+	background: #2f4151 !important;
+	color: white !important;
+	font-weight: 600 !important;
+	font-size: 14px !important;
+    padding: 10px;
+}
+
+.grid-row:hover {
+    background: #e8f3ff;
+}
+.grid-row td {
+    font-size: 14px;
+}
